<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wallet Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Header title</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Reset expenses</string>

    <string name="menu_home">Home</string>
    <string name="menu_sheet">.CSV import</string>
    <string name="menu_categories" tools:ignore="ExtraTranslation">Categories</string>
    <string name="menu_categoriesexpenses">Expenses</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logoff">Log out</string>
    <string name="menu_createexpense">Expense</string>
    <string name="button_createexpense">Creates an expense</string>
    <string name="label_precio">Precio</string>
    <string name="label_desc">Descripcion</string>
    <string name="label_fecha">Fecha</string>
    <string name="label_hora">Hora</string>
    <string name="label_categoria">Categoria</string>
    <string name="label_name">Nombre</string>
    <string name="menu_metrics">Metrics</string>
    <string name="menu_importes">Importes</string>
    <string name="menu_createcategories">Create Category</string>
    <string name="button_createcategory">Creates a category</string>
    <string name="button_savechanges">Saves changes</string>
    <string name="button_delete">Deletes the category</string>
    <string name="button_deleteExpense">Deletes the expense</string>
    <string name="label_username">Usuario</string>
    <string name="label_password">Contraseña</string>
    <string name="button_fingerprint">Enables/Disables Fingerprint authentication</string>
    <string name="login_description">Login button</string>
    <string name="offline_mode_description">Starts the application in offline mode</string>
    <string name="label_confirm_password">Confirmar Contraseña</string>
    <string name="register_description">Register button</string>
    <string name="go_to_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="go_to_register">¿No tienes cuenta? Regístrate</string>

</resources>