<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_categories">


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.wallettracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.wallettracker.ui.categories.CategoriesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/nav_importsheet"
        android:name="com.example.wallettracker.ui.importSheet.ImportSheet"
        android:label="@string/menu_sheet"
        tools:layout="@layout/fragment_import_sheet" />
    <fragment
        android:id="@+id/nav_categoriesexpenses"
        android:name="com.example.wallettracker.ui.categoriesExpenses.CategoriesExpensesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categoriesexpenses" />
    <fragment
        android:id="@+id/nav_createcategories"
        android:name="com.example.wallettracker.ui.createCategories.CreateCategoriesFragment"
        android:label="@string/menu_createcategories"
        tools:layout="@layout/fragment_createcategories" />
    <fragment
        android:id="@+id/nav_createexpense"
        android:name="com.example.wallettracker.ui.createExpense.CreateExpenseFragment"
        android:label="@string/menu_createexpense"
        tools:layout="@layout/fragment_createexpense" />
</navigation>