<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/navicon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_importsheet"
            android:icon="@drawable/ic_grid"
            android:title="@string/menu_sheet" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/navicon_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/navicon_logout"
            android:title="@string/menu_logoff" />
    </group>
</menu>