<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.CategoriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/input_name"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:textSize="40sp"
                android:inputType="text"
                android:gravity="center_horizontal"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/saveChanges"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                app:fabCustomSize="40dp"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                app:borderWidth="2dp"
                android:backgroundTint="@color/white"
                app:backgroundTint="@color/black"
                android:contentDescription="@string/button_savechanges"
                app:srcCompat="@drawable/ic_check"

                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rview_expenses"
            android:layout_width="match_parent"
            android:layout_height="500sp"
            android:layout_marginTop="26dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="26dp"
            android:padding="20dp"

            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_createexpense"
                app:borderWidth="2dp"
                android:backgroundTint="@color/white"
                app:backgroundTint="@color/black"
                app:srcCompat="@drawable/ic_add"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:contentDescription="@string/button_delete"
                app:borderWidth="2dp"
                android:backgroundTint="@color/white"
                app:backgroundTint="@color/black"
                app:srcCompat="@drawable/id_delete"/>
        </LinearLayout>


        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>